# referee-assigner

./: CMakeLists.txt  README.md  main.cpp
resources/: matches_10.json  test.json  test_matches.json  test_referees.json
utils/: Assignment.cpp  Assignment.h  CSVsaver.cpp  CSVsaver.h  Date.cpp  Date.h  Hour.cpp  Hour.h  Location.cpp  Location.h  MapDrawer.cpp  MapDrawer.h  Match.cpp  Match.h  Referee.cpp  Referee.h
